objects/SFDC_Tactics__c.object
<CustomObject>
    <description>Specific set of tactics tied to each account that the sales manager needs to execute.  Each tactic lists specific revenue goals and products to be sold to a particular division or department.  Tasks and milestones are also attached to each tactic.</description>
    <label>Tactic</label>
    <nameField>
        <label>Tactic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tactics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000001Y6wpEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <description>Name of the sales team who is driving this tactic</description>
        <label>Sales Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>REAGENTS</fullName>
                </value>
                <value>
                    <fullName>ANALYTICAL</fullName>
                </value>
                <value>
                    <fullName>MOLECULAR</fullName>
                </value>
                <value>
                    <fullName>GENETIC DISEASE</fullName>
                </value>
                <value>
                    <fullName>SERVICE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Goal__c</fullName>
        <label>Solution / Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tactic_Status__c</fullName>
        <label>Tactic Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Opportunity Created</fullName>
                </value>
                <value>
                    <fullName>Achieved Rev. Goals</fullName>
                </value>
                <value>
                    <fullName>Partial Achievement</fullName>
                </value>
                <value>
                    <fullName>Lost - No Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Est_Total_Revenue__c</fullName>
        <formula>Est_Product_Revenue__c  +  Est_Service_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Total Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Product_Revenue__c</fullName>
        <label>Est Product Revenue</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Service_Revenue__c</fullName>
        <label>Est Service Revenue</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Key_Contact_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Contact Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N30000001Y6wsEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Problem_Addressed__c</fullName>
        <label>Business Problem Addressed</label>
        <type>TextArea</type>
    </fields>
</CustomObject>